# p7-follow-person-ToniLMM

followperson/: CMakeLists.txt  package.xml
followperson/include/followperson/: ControlNode.hpp  Detection3DToTFNode.hpp  MainNode.hpp  PerceptionNode.hpp
followperson/launch/: followperson.launch.py
followperson/src/: control_main.cpp  detection3d_to_tf_main.cpp  followperson_main.cpp  perception_main.cpp
followperson/src/followperson/: ControlNode.cpp  Detection3DToTFNode.cpp  MainNode.cpp  PerceptionNode.cpp
